--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.7"
+  },
+  "devDependencies": {
     "dprint": "^0.47.4"
   }
 }
